<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_running"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_timer"
            android:title="@string/menu_interval" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_programs"
            android:title="@string/menu_programs" />
    </group>

</menu>
