<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.interval.IntervalFragment"
        android:label="@string/menu_interval"
        tools:layout="@layout/fragment_interval" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myapplication.ui.programs.ProgramsFragment"
        android:label="@string/menu_programs"
        tools:layout="@layout/fragment_tools" />

</navigation>