<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunningActivity"
    android:background="@color/black"
    android:id="@+id/activity_running">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            app:direction="clockwise"
            app:dotColor="@color/colorPrimary"
            app:dotWidth="16dp"
            app:drawDot="false"
            app:enableProgressAnimation="true"
            app:progressBackgroundColor="@color/lighter_black"
            app:progressBackgroundStrokeWidth="8dp"
            app:progressCap="round"
            app:progressColor="@color/red"
            app:progressStrokeWidth="16dp"
            app:startAngle="270"
            app:textColor="@color/white"
            app:textSize="25sp"
            app:fillBackground="false"
            app:gradientType="linear"
            app:gradientEndColor="@color/red"
            android:alpha="0.85"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/running_layout1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/running_value1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/running_layout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/ripple">

                 <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/running_value2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/running_layout3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/running_value3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/running_layout4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/running_value4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/running_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5">

            <Button
                android:id="@+id/running_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/purple"
                android:alpha="0.6"
                android:text="@string/running_pause"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/running_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_button"
                android:alpha="0.6"
                android:text="@string/running_end"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/running_start_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/green"
                android:alpha="0.6"
                android:text="@string/running_start_interval"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>




</FrameLayout>